# USCMP

./: .env.example  .gitignore  DEMO.md  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml  download-bootstrap-db.sh  download-congress-data.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  congress_terms.yaml  errors.py  logging.py  scoring_weights.yaml
backend/app/db/: neo4j.py
backend/app/etl/: backfill_person_scope.py  backfill_wikipedia_ids.py  cleanup_demo_nodes.py  dry_run.py  extract_profile_snapshots.py  fetch_wikipedia_snapshots.py  import_congress_profiles.py  import_fec_data.py  import_finance_graph.py  import_fixture_profiles.py  import_holdings.py  import_holdings_disclosures.py  import_holdings_graph.py  import_json_profiles.py  import_member_profiles.py  import_profile_graph.py  import_real_graph.py  import_real_members.py  import_sandbox.py  import_uscl_profiles.py  migration_v062_profile_status.py  migration_v06_profiles.py  migration_v071_current_members.py  (+5 more)
backend/scripts/: export_to_sqlite.py
backend/tests/: conftest.py  test_adapter.py  test_api_integration.py  test_cypher_safety.py  test_entity_resolution.py  test_evidence_required.py  test_golden_snapshots.py  test_graph_contract.py  test_graph_depth_limit.py  test_graph_service.py  test_phase3_real_data.py  test_prediction_guard.py  test_profile_graph_import.py  test_time_slice_filter.py  test_v072_scope.py  test_v08_enrichment.py  test_v092_finance.py  test_v093_finance_graph.py  test_v094_holdings.py  test_wikipedia_profile_import.py
(+1205 files in other folders)
